--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="shortcut icon" href="assets/facebook.ico" type="image/x-icon">
+  <link rel="stylesheet" href="src/css/styles.css">
+  <link rel="shortcut icon" href="src/assets/facebook.ico" type="image/x-icon">
   <title>Facebook clone</title>
 </head>
 
@@ -14,7 +14,7 @@
     <div class="md:bg-main-gray md:pt-30 md:pb-30">
       <div class="grid grid.cols-1 md:grid-cols-2 md:w-980px mx-auto">
         <div class="pt-10">
-          <img src="assets/logo_facebook.svg" alt="facebook" class="w-30 mx-auto md:mx-0 md:w-290px md:-mb-4 md:-ml-8">
+          <img src="src/assets/logo_facebook.svg" alt="facebook" class="w-30 mx-auto md:mx-0 md:w-290px md:-mb-4 md:-ml-8">
           <p class="hidden md:flex text-subtitle leading-8 w-500px pr-6">O Facebook ajuda você a se conectar e
             compartilhar com as pessoas que fazem parte da sua vida.</p>
         </div>
